Changed overload of exec() to be more linux friendly